scss/_variables.scss
$enable-gradients: false;
$enable-shadows: false;
$enable-rounded: true;

$prefix: talis-;

$gray-100: #f8f9fa;
$gray-200: #e9ecef;
$gray-300: #dee2e6;
$gray-400: #ced4da;
$gray-500: #adb5bd;
$gray-600: #868e96;
$gray-700: #495057;
$gray-800: #343a40;
$gray-900: #212529;
$black: #000;
$white: #fff;

$turquoise: #017d87;
$accent: #005d64;
$pink: #c5197d;
$green: #25828d;
$yellow: #ffc943;
$red: #c42129;
$purple: #4a2b80;
$orange: #f47821;

$brand-success: #77e0ce;
$brand-info: #4cc3d6;
$brand-warning: #ffc943;
$brand-danger: #c42129;

$primary: $turquoise;
$secondary: $accent;
$success: $brand-success;
$info: $brand-info;
$warning: $brand-warning;
$danger: $brand-danger;
$light: $gray-100;
$dark: $gray-900;

$body-color: $gray-700;
$body-bg: #fff;

$font-family-sans-serif: "Open Sans", sans-serif, "Apple Color Emoji",
  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
$font-size-base: .8125rem;
$font-size-lg: $font-size-base * 1.25;

$line-height-base: 1.6;

$paragraph-margin-bottom: .625rem;

$h1-font-size: 13px * 2.3076923077;
$h2-font-size: 13px * 2.3076923077;
$h3-font-size: 13px * 1.538461538;
$h4-font-size: 13px * 1.538461538;
$h5-font-size: 13px;
$h6-font-size: 13px;

$headings-font-weight: 300;

$border-width: 1px;
$border-widths: (
  1: 1px,
  2: 2px,
  3: 3px,
  4: 4px,
  5: 5px,
);

$border-radius: .1875rem;
$border-radius-lg: .3125rem;

$spacer: .9375rem;

$nav-link-font-weight: 600;
$nav-link-hover-color: $accent;
$nav-tabs-link-hover-border-color: $gray-200 $gray-200 $primary;
$nav-tabs-link-active-border-color: $white $white $primary;
$nav-tabs-border-radius: 0;
$nav-link-disabled-color: $gray-500;
$nav-tabs-border-color: transparent;
$nav-tabs-link-active-color: $primary;

$nav-pills-link-active-color: $primary;
$nav-pills-link-active-bg: $white;
$nav-pills-border-radius: 3px;

$alert-margin-bottom: 1.25rem;
$alert-border-radius: 0;
$alert-border-width: 0;
$alert-bg-scale: -60%;
$alert-color-scale: 0;
$alert-border-scale: 0;
$alert-link-font-weight: 400;

$badge-font-size: 1em;
$badge-font-weight: 600;
$badge-color: $black;
$badge-padding-y: .1538461538em;
$badge-padding-x: .3076923077em;
$badge-border-radius: .2307692308em;

$breadcrumb-padding-y: .5rem;
$breadcrumb-margin-bottom: 1.25rem;
$breadcrumb-divider-color: $gray-700;
$breadcrumb-active-color: $gray-700;

$dropdown-divider-bg: $gray-400;
$dropdown-divider-margin-y: .5625rem;
$dropdown-link-color: $primary;
$dropdown-link-hover-color: $accent;
$dropdown-header-color: $gray-700;
$dropdown-item-padding-y: 3px;
$dropdown-item-padding-x: 20px;
$dropdown-header-padding: 3px $dropdown-item-padding-x;

$input-btn-focus-width: 1px;
$input-btn-focus-box-shadow: 0 0 0 1px currentcolor;
$btn-font-weight: 600;
$btn-border-width: 1px;
$btn-transition: background-color 1s cubic-bezier(.19, 1, .22, 1);
$btn-disabled-opacity: 1;
$btn-box-shadow: 0;
$btn-active-box-shadow: 0;
$btn-active-border-shade-amount: 0;
$btn-active-border-tint-amount: 0;
$btn-link-color: $primary;
$btn-link-hover-color: $accent;
$btn-link-disabled-color: $gray-500;
$btn-padding-y-lg: 11px;
$btn-padding-x-lg: 19px;
$btn-font-size-lg: 1.09375rem;
$btn-disabled-color: #69727f;

$caret-width: .3em;
$caret-vertical-align: $caret-width * .85;
$caret-spacing: $caret-width * .85;

$cradle-anim-dur: 607.5ms;
$cradle-anim-fun: cubic-bezier(0, 0, .5, 1);
$cradle-colour-anim-dur: $cradle-anim-dur * 4;
$cradle-ball-colour-default: #107179;
$cradle-ball-colour-teal: #6fdac9;
$cradle-ball-colour-gold: #fbbf45;
$cradle-ball-colour-pink: #fc4589;
$cradle-ball-colour-blue: #59d1e4;
$cradle-shadow-colour: rgba($black, .15);

$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1400px
);

$input-color: $black;
$input-border-color: $gray-600;
$input-disabled-bg: $gray-100;
$input-disabled-border-color: $gray-200;

$input-focus-border-color: $primary;
$input-focus-width: 1px;
$input-focus-box-shadow: 0 0 0 1px $primary;

$input-placeholder-color: $gray-700;
$input-plaintext-color: $black;

$input-btn-focus-color: $primary;

$form-label-color: $black;
$form-label-margin-bottom: .3846153846em;

$form-select-focus-border-color: $input-focus-border-color;
$form-select-focus-width: $input-focus-width;
$form-select-focus-box-shadow: 0 0 0 $form-select-focus-width
  $input-btn-focus-color;

$form-check-input-border: none;
$form-check-input-checked-color: $primary;
$form-check-input-checked-color-alt: $pink;
$form-check-input-checked-bg-color: $white;
$form-check-input-checked-border-color: $primary;
$form-check-min-height: 2rem;
$form-check-padding-start: 1.5rem;
$form-check-input-border-radius: 3px;
$form-check-radio-checked-bg-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2.5' fill='#{$form-check-input-checked-color}'/></svg>");

$form-feedback-valid-color: $turquoise;
$form-feedback-invalid-color: $red;

$link-hover-color: $accent;
$link-hover-decoration: none;

$modal-backdrop-opacity: .8;
$modal-inner-padding: $spacer;
$modal-md: 600px;
$modal-header-border-color: $gray-200;
$modal-header-border-width: 0;
$modal-footer-border-width: 1px;
$modal-header-padding: $spacer * 2 $spacer $spacer;
$modal-title-line-height: 1.6;
$modal-footer-border-color: $gray-300;
$modal-dialog-margin-y-sm-up: 1.875rem;

$navbar-dark-color: $white;
$navbar-dark-hover-color: $white;
$navbar-dark-active-color: $white;
$navbar-padding-y: 0;
$navbar-nav-link-padding-x: .75rem;
$nav-link-height: 3.75rem;
$navbar-brand-font-size: 1.09375rem;

$pagination-border-radius: .3125rem;
$pagination-border-color: $primary;
$pagination-padding-y: .5rem;
$pagination-padding-x: 1rem;
$pagination-transition: none;
$pagination-hover-border-color: $primary;

$pagination-active-bg: $white;
$pagination-active-color: $primary;
$pagination-active-border-color: $primary;

$pagination-disabled-color: $btn-disabled-color;
$pagination-disabled-bg: $white;
$pagination-disabled-border-color: $primary;

$progress-height: .5rem;
$progress-bg: transparent;
$progress-border-radius: .5rem;

$table-striped-bg: $gray-100;
$table-cell-vertical-align: middle;
$table-border-color: $gray-200;
$table-border-width: $btn-border-width;
$table-group-separator-color: $gray-200;
$table-cell-padding-x-lg: 1.25rem;
$table-cell-padding-y-lg: 1.25rem;

$toast-padding-x: 1.5em;
$toast-padding-y: .75em;
$toast-font-size: 1.09375rem;
$toast-background-color: #a4d1ea;
$toast-color: $black;
$toast-border-radius: 2rem;
$toast-box-shadow: 0;
$toast-border-width: 0;
$toast-max-width: 100%;

$zindex-modal: 1055;
$zindex-popover: 1070;

$btn-focus-width: 1px;

